# gnu_sharutils

./: .gitignore  .gnuploadrc  AUTHORS  ChangeLog  ChangeLog.2000  ChangeLog.2004  ChangeLog.2005  ChangeLog.2013  Makefile.am  NEWS  NEWS.git  README  README-GIT  README.git  TODO  announce.txt  bootstrap  configure.ac  configure.ac.git
doc/: .cvsignore  .gitignore  Makefile.am  gnudoc.tpl  mkgnudoc.sh  sharutils.texi  uuencode.1  uuencode.5
lib/: .cvsignore  .gitignore  basename.h  liballoca.h  md5.c  md5.h  system.h  whoami.c
po/: .cvsignore  .gitignore  Makevars  POTFILES.in  README  bg.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  et.po  fi.po  fr.po  ga.po  getpo.sh  gl.po  hu.po  id.po  it.po  ja.po  nb.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ru.po  rw.po  sr.po  sv.po  tr.po  uk.po  vi.po  zh_CN.po  zh_TW.po
src/: .cvsignore  .gitignore  Makefile.am  compress-dummy.in  encode.c  local.h  local.h.git  mk-help.sh  scribble.c  scripts.def  scripts.tpl  shar-full-help.txt  shar-opts.def  shar-short-help.txt  shar-std.def  shar.c  unshar-full-help.txt  unshar-opts.def  unshar-short-help.txt  unshar.c  uudecode-full-help.txt  uudecode-opts.def  uudecode-short-help.txt  uudecode.c  uuencode-full-help.txt  uuencode-opts.def  uuencode-short-help.txt  uuencode.c
tests/: Makefile.am  shar-1  shar-1.ok  shar-2  shar-3  shar-4  sharutils.m4  uudecode-2  uutest-1
