## Makefile for the toplevel directory of the GNU Shar utilities.
## Copyright (C) 1995-2013 Free Software Foundation, Inc.
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 3, or (at your option)
## any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to:
## the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
## Boston, MA  02110-1301, USA.

## Process this file with automake to produce Makefile.in.

EXTRA_DIST      = config.rpath m4 $(DIST_ALPHA)
SUBDIRS         = intl lib libopts src doc po tests
ACLOCAL_AMFLAGS = -I m4
